# Rust

./: .gitignore  README.md
biofeedback_engine/: Cargo.toml  README.md
biofeedback_engine/benches/: pipeline_latency.rs
biofeedback_engine/benchmarks/: PROFILE_REPORT.md
biofeedback_engine/scripts/: generate_mock_edf.py  profile_vs_legacy.py
biofeedback_engine/src/: lib.rs  main.rs  pipeline.rs
biofeedback_engine/src/dsp/: mod.rs
biofeedback_engine/src/edf/: mod.rs  parser.rs
budget_tracker/: Cargo.toml  README.md
budget_tracker/src/: main.rs
cyberpunk_tui_dashboard/: Cargo.toml  README.md
cyberpunk_tui_dashboard/src/: collector.rs  main.rs  model.rs  ui.rs
fast_data_processor/: Cargo.toml  README.md
fast_data_processor/benches/: processing_bench.rs
fast_data_processor/examples/: sample_trades.ndjson
fast_data_processor/scripts/: benchmark.ps1
fast_data_processor/src/: lib.rs  main.rs
hello_rust/src/: lesson1.rs  main.rs
legacy_c_ffi_bridge/: Cargo.toml  README.md  build.rs  pyproject.toml
legacy_c_ffi_bridge/benches/: wrapper_overhead.rs
legacy_c_ffi_bridge/benchmarks/: OVERHEAD_REPORT.md  VALGRIND_REPORT.md  generate_overhead_report.py  measure_overhead.py
legacy_c_ffi_bridge/c_legacy/: legacy_math.c  legacy_math.h
legacy_c_ffi_bridge/python/legacy_c_ffi_bridge/: __init__.py
legacy_c_ffi_bridge/scripts/: run_benchmarks.ps1
legacy_c_ffi_bridge/src/: lib.rs  safe.rs
python_performance_bridge/: Cargo.toml  README.md  pyproject.toml
python_performance_bridge/benches/: text_clean_bench.rs
python_performance_bridge/benchmarks/: PROFILE_REPORT.md  generate_report.py  run_profile.py
python_performance_bridge/python/python_performance_bridge/: __init__.py  baseline.py
python_performance_bridge/scripts/: run_benchmarks.ps1
python_performance_bridge/src/: lib.rs  processing.rs
realtime_collab_server/: Cargo.toml  README.md
realtime_collab_server/examples/: whiteboard_client.html
realtime_collab_server/src/: hub.rs  main.rs  protocol.rs
rust_practice_notebook/: README.md  practice_01_variables_and_mutability.rs  practice_02_ownership_move.rs  practice_03_borrowing_rules.rs  practice_04_slices_and_strings.rs  practice_05_struct_basics.rs  practice_06_enum_match.rs  practice_07_option_result.rs  practice_08_pattern_matching.rs  practice_09_vec_practice.rs  practice_10_hashmap_practice.rs  practice_11_iterator_map_filter.rs  practice_12_iterator_fold.rs  practice_13_closures_basics.rs  practice_14_lifetimes_intro.rs  practice_15_generic_functions.rs  practice_16_trait_basics.rs  practice_17_trait_impl.rs  practice_18_error_handling.rs  practice_19_custom_error.rs  practice_20_file_io_basics.rs  practice_21_bufread_lines.rs  practice_22_path_and_osstr.rs  practice_23_modules_visibility.rs  practice_24_use_and_crate.rs  practice_25_smart_pointer_box.rs  practice_26_rc_refcell.rs  practice_27_thread_spawn.rs  practice_28_mpsc_channel.rs  practice_29_mutex_arc.rs  practice_30_async_await_intro.rs  practice_31_tokio_sleep.rs  practice_32_tokio_select.rs  practice_33_serde_json_parse.rs  practice_34_command_line_args.rs  practice_35_string_utf8.rs  practice_36_byte_and_bit_ops.rs  practice_37_sorting_custom.rs  practice_38_binary_search.rs  practice_39_linked_list_std.rs  (+11 more)
