[package]
name = "biofeedback_engine"
version = "0.1.0"
edition = "2021"
description = "High-performance EEG/EMG biofeedback processing engine"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
nom = "7"
rustfft = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "pipeline_latency"
harness = false
