[package]
name = "fast_data_processor"
version = "0.1.0"
edition = "2021"
description = "High-performance CLI data processor for logs and crypto NDJSON"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
regex = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "processing_bench"
harness = false
