[package]
name = "python_performance_bridge"
version = "0.1.0"
edition = "2021"
description = "PyO3 bridge for accelerating Python text preprocessing"

[lib]
name = "python_performance_bridge"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
rayon = "1"
regex = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "text_clean_bench"
harness = false
