[package]
name = "realtime_collab_server"
version = "0.1.0"
edition = "2021"
description = "Async WebSocket chat + binary whiteboard collaboration server"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
